# Hackecelarate2026

./: .gitignore  API-key.txt  README.md  app.py  deploy.sh  pyproject.toml  requirements.txt
device_pulse/: __init__.py  cli.py  config.py  engine.py  loaders.py  models.py  signals.py
examples/: generate_sample_data.py
templates/: device.html  index.html
tests/: test_signals.py
