[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "device-pulse"
version = "0.1.0"
description = "Predictive maintenance intelligence for medical devices (lab analysers)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pandas>=1.5"]

[project.scripts]
device-pulse = "device_pulse.cli:main"

[tool.setuptools.packages.find]
include = ["device_pulse*"]
